--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
       <!-- Družbena omrežja -->
       <div class="flex justify-center space-x-6 mt-8">
-        <a href="#" class="text-blue-500 hover:text-blue-700" title="Instagram"><i class="ph ph-instagram-logo text-3xl"></i></a>
-        <a href="#" class="text-pink-600 hover:text-pink-800" title="Strava"><i class="ph ph-fire text-3xl"></i></a>
+        <a href="https://www.instagram.com/maks_poje_07/" class="text-blue-500 hover:text-blue-700" title="Instagram" target="_blank"><i class="ph ph-instagram-logo text-3xl"></i></a>
+        <a href="https://www.strava.com/athletes/123972682" class="text-pink-600 hover:text-pink-800" title="Strava" target="_blank"><i class="ph ph-fire text-3xl"></i></a>
         <a href="#" class="text-red-600 hover:text-red-800" title="YouTube"><i class="ph ph-youtube-logo text-3xl"></i></a>
       </div>
 
@@ -37,28 +37,31 @@
         <h2 class="text-2xl font-semibold mb-4 text-center">Koledar dirk 2025</h2>
         <ul class="space-y-2 text-gray-700">
           <li>✅ 10. maj – Dirka Juran Dol (5.mesto)</li>
-          <li>✅ 13.junij – Kronometer franja</li>
+          <li>✅ 13. junij – Kronometer Franja</li>
           <li>🕒 15. junij – Maraton Franja</li>
           <li>🕒 19. julij – Gorje kriterij</li>
           <li>🕒 20. julij – Vzpon na Pokljuko</li>
-         <li> 🕒 9. avgust- Ilirska Bistrica Kriterij</li>
-        <li>  🕒 30. avgust- Kriterij Kranj</li>
+          <li>🕒 9. avgust – Ilirska Bistrica Kriterij</li>
+          <li>🕒 30. avgust – Kriterij Kranj</li>
+        </ul>
+      </div>
 
       <!-- Galerija slik -->
       <div class="mt-12">
         <h2 class="text-2xl font-semibold mb-4 text-center">Galerija</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-          <img src=https://www.instagram.com/p/DHwUKHCocsv5J9h9wvnohFtGhfXGEi8JsGXcGc0/?img_index=1 alt="Kolesarska slika" class="rounded-xl shadow-md" />
-          <img src=https://www.instagram.com/stories/highlights/18181027777317341/ alt="Dirka" class="rounded-xl shadow-md" />
-          <img src= https://www.instagram.com/stories/highlights/18060550343277038/ alt="Cestno kolesarstvo" class="rounded-xl shadow-md" />
+          <img src="kolo1.jpg" alt="Kolesarska slika" class="rounded-xl shadow-md" />
+          <img src="dirka2.jpg" alt="Dirka" class="rounded-xl shadow-md" />
+          <img src="vzpon3.jpg" alt="Cestno kolesarstvo" class="rounded-xl shadow-md" />
         </div>
       </div>
 
       <!-- Gumb za povezave -->
-      <div class="text-center mt-12">
-        <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-xl transition duration-300">Moje povezave</a>
-      </div>https://www.instagram.com/maks_poje_07/
-    </div>https://www.strava.com/athletes/123972682
+      <div class="text-center mt-12 space-x-4">
+        <a href="https://www.instagram.com/maks_poje_07/" target="_blank" class="text-blue-600 hover:underline">Instagram</a>
+        <a href="https://www.strava.com/athletes/123972682" target="_blank" class="text-red-600 hover:underline">Strava</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
