--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maks Poje – O meni</title>
+  <title>Maks Poje – Slovenski kolesar</title>
+
+  <!-- SEO Meta tags -->
+  <meta name="description" content="Uradna spletna stran Maksa Poje – mladega slovenskega kolesarja, člana ekipe UAE Pogi Team Generali. Sledi njegovim dirkam, treningom in galeriji trenutkov." />
+  <meta name="keywords" content="Maks Poje, kolesarstvo, slovenski kolesar, UAE Pogi Team Generali, Franja, Strava, Instagram" />
+  <meta name="author" content="Maks Poje" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://neo5477.github.io/maks-poje-site/" />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
@@ -50,9 +58,9 @@
       <div class="mt-12">
         <h2 class="text-2xl font-semibold mb-4 text-center">Galerija</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-          <img src="kolo1.jpg" alt="Kolesarska slika" class="rounded-xl shadow-md" />
-          <img src="dirka2.jpg" alt="Dirka" class="rounded-xl shadow-md" />
-          <img src="vzpon3.jpg" alt="Cestno kolesarstvo" class="rounded-xl shadow-md" />
+          <img src="images/kolo1.jpg" alt="Kolesarska slika" class="rounded-xl shadow-md" />
+          <img src="images/dirka2.jpg" alt="Dirka" class="rounded-xl shadow-md" />
+          <img src="images/vzpon3.jpg" alt="Cestno kolesarstvo" class="rounded-xl shadow-md" />
         </div>
       </div>
 
@@ -65,3 +73,4 @@
   </div>
 </body>
 </html>
+
